--- a/NuGet.config
+++ b/NuGet.config
@@ -3,6 +3,7 @@
   <packageSources>
     <add key="Blacklite vNext" value="https://www.myget.org/F/blacklite-vnext/" />
     <add key="Blacklite DependencyInjection" value="https://ci.appveyor.com/nuget/dependencyinjection-4gs3yxltdlnr" />
+    <add key="Blacklite Common" value="https://ci.appveyor.com/nuget/common-c9hqf64j6n2i" />
     <add key="AspNet 5 vNext" value="https://www.myget.org/F/aspnetvnext/api/v2" />
     <add key="NuGet.org" value="https://nuget.org/api/v2/" />
   </packageSources>
