--- a/src/Blacklite.Framework.Shared.Reflection/project.json
+++ b/src/Blacklite.Framework.Shared.Reflection/project.json
@@ -1,7 +1,8 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.DependencyInjection": "1.0.0-rc1-*"
+        "Microsoft.Framework.DependencyInjection": "1.0.0-rc1-*",
+        "Blacklite.Framework.Interfaces": { "version": "1.0.0-beta-*", "type": "build" }
     },
 
     "frameworks": {
