Enabled cross compilation with net45

--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -10,6 +10,10 @@
     },
 
     "frameworks": {
+        "net45": {
+            "dependencies": {
+            }
+        },
         "aspnet50": {
             "dependencies": {
             }
