--- a/src/Blacklite.Framework.Interfaces/project.json
+++ b/src/Blacklite.Framework.Interfaces/project.json
@@ -5,6 +5,10 @@
     },
 
     "frameworks": {
+        "net45": {
+            "dependencies": {
+            }
+        },
         "aspnet50": {
             "dependencies": {
             }
