--- a/src/Blacklite.Framework.Shared.Reflection/project.json
+++ b/src/Blacklite.Framework.Shared.Reflection/project.json
@@ -6,6 +6,17 @@
     },
 
     "frameworks": {
+        "net45": {
+            "frameworkAssemblies": {
+                "System.Collections": "4.0.10.0",
+                "System.Linq": "4.0.0.0",
+                "System.Reflection": "4.0.10.0",
+                "System.Reflection.Extensions": "4.0.0.0",
+                "System.Reflection.Primitives": "4.0.0.0"
+            },
+            "dependencies": {
+            }
+        },
         "aspnet50": {
             "frameworkAssemblies": {
                 "System.Collections": "4.0.10.0",
