--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -3,9 +3,9 @@
     "dependencies": {
         "Rx-Core": "2.2.5.0",
         "Rx-Linq": "2.2.5.0",
-        "Microsoft.Framework.DependencyInjection": "1.0.0-rc1-*",
-        "Microsoft.Framework.ConfigurationModel": "1.0.0-rc1-*",
-        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-rc1-*",
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta3-*",
+        "Microsoft.Framework.ConfigurationModel": "1.0.0-beta3-*",
+        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3-*",
         "Blacklite.Framework.Interfaces": { "version": "1.0.0-beta-*", "type": "build" }
     },
 
