--- a/src/Blacklite.Framework.Interfaces/project.json
+++ b/src/Blacklite.Framework.Interfaces/project.json
@@ -1,7 +1,7 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-rc1-*"
+        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3-*"
     },
 
     "frameworks": {
@@ -10,7 +10,7 @@
             }
         },
         "aspnet50": {
-            "dependencies": {   
+            "dependencies": {
             }
         },
         "aspnetcore50": {
