--- a/src/Blacklite.Framework.Interfaces/project.json
+++ b/src/Blacklite.Framework.Interfaces/project.json
@@ -1,6 +1,7 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
+        "Microsoft.Framework.Runtime.Interfaces": { "version": "1.0.0-beta3-*", "type": "build" }
     },
 
     "frameworks": {
