Update to use kre test runner.

--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -1,27 +1,31 @@
 ﻿{
-    "version": "1.0.0-*",
-    "dependencies": {
-        "Rx-Core": "2.2.5.0",
-        "Rx-Linq": "2.2.5.0",
-        "Microsoft.Framework.DependencyInjection": "1.0.0-beta3-*",
-        "Microsoft.Framework.ConfigurationModel": "1.0.0-beta3-*",
-        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3-*",
-        "Blacklite.Framework.Interfaces": { "version": "1.0.0-beta-*", "type": "build" }
-    },
+	"version": "1.0.0-*",
+	"dependencies": {
+		"Rx-Core": "2.2.5.0",
+		"Rx-Linq": "2.2.5.0",
+		"Microsoft.Framework.DependencyInjection": "1.0.0-beta3-*",
+		"Microsoft.Framework.ConfigurationModel": "1.0.0-beta3-*",
+		"Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3-*",
+		"Blacklite.Framework.Interfaces": { "version": "1.0.0-beta-*", "type": "build" }
+	},
 
-    "frameworks": {
-        "net45": {
-            "dependencies": {
-            }
-        },
-        "aspnet50": {
-            "dependencies": {
-            }
-        },
-        "aspnetcore50": {
-            "dependencies": {
-                "System.Runtime": "4.0.20-beta-*"
-            }
-        }
-    }
+	"compilationOptions": {
+		"warningsAsErrors": true
+	},
+
+	"frameworks": {
+		"net45": {
+			"dependencies": {
+			}
+		},
+		"aspnet50": {
+			"dependencies": {
+			}
+		},
+		"aspnetcore50": {
+			"dependencies": {
+				"System.Runtime": "4.0.20-beta-*"
+			}
+		}
+	}
 }
