--- a/src/Blacklite.Framework.Steps/project.json
+++ b/src/Blacklite.Framework.Steps/project.json
@@ -4,7 +4,7 @@
         "Microsoft.Framework.DependencyInjection": "1.0.0-beta3-*",
         "Blacklite.Framework.Shared": "1.0.0-beta-*",
         "Blacklite.Framework.Shared.Reflection": "1.0.0-beta-*",
-        "Blacklite.Framework.Interfaces": { "version": "1.0.0-beta-*", "type": "build" }
+        "Blacklite.Framework.Interfaces": "1.0.0-beta-*"
     },
 	
 	"compilationOptions": {
@@ -13,14 +13,16 @@
 
     "frameworks": {
         "net45": {
-            "frameworkAssemblies": {
+			"frameworkAssemblies": {
+				"System.Runtime": "4.0.0.0",
                 "System.Collections.Concurrent": "4.0.0.0",
                 "System.Reflection": "4.0.0.0",
                 "System.Reflection.Extensions": "4.0.0.0"
             }
         },
         "aspnet50": {
-            "frameworkAssemblies": {
+			"frameworkAssemblies": {
+				"System.Runtime": "4.0.20.0",
                 "System.Collections.Concurrent": "4.0.0.0",
                 "System.Reflection": "4.0.10.0",
                 "System.Reflection.Extensions": "4.0.0.0"
