--- a/src/Blacklite.Framework.Interfaces/project.json
+++ b/src/Blacklite.Framework.Interfaces/project.json
@@ -1,7 +1,7 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3-*"
+        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3"
     },
 
     "compilationOptions": {
@@ -19,7 +19,7 @@
         },
         "aspnet50": {
             "frameworkAssemblies": {
-                "System.Runtime": "4.0.20.0",
+                "System.Runtime": "4.0.10.0",
                 "System.ComponentModel": "4.0.0.0"
             },
             "dependencies": {
