--- a/src/Blacklite.Framework.Shared.Reflection/project.json
+++ b/src/Blacklite.Framework.Shared.Reflection/project.json
@@ -1,7 +1,7 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.DependencyInjection": "1.0.0-beta3-*",
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
         "Blacklite.Framework.Interfaces":"1.0.0-beta-*"
     },
 	
@@ -24,10 +24,10 @@
         },
         "aspnet50": {
 			"frameworkAssemblies": {
-				"System.Runtime": "4.0.20.0",
-                "System.Collections": "4.0.10.0",
+				"System.Runtime": "4.0.10.0",
+                "System.Collections": "4.0.0.0",
                 "System.Linq": "4.0.0.0",
-                "System.Reflection": "4.0.10.0",
+                "System.Reflection": "4.0.0.0",
                 "System.Reflection.Extensions": "4.0.0.0",
                 "System.Reflection.Primitives": "4.0.0.0"
             },
