--- a/src/Blacklite.Framework.Shared/project.json
+++ b/src/Blacklite.Framework.Shared/project.json
@@ -2,7 +2,7 @@
 	"version": "1.0.0-*",
 	"dependencies": {
         "Blacklite.Framework.Interfaces": "1.0.0-beta-*",
-        "Microsoft.Framework.DependencyInjection": "1.0.0-beta3-*"
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta3"
 	},
 
 	"compilationOptions": {
@@ -19,7 +19,7 @@
 		},
 		"aspnet50": {
 			"frameworkAssemblies": {
-				"System.Runtime": "4.0.20.0"
+				"System.Runtime": "4.0.10.0"
 			},
 			"dependencies": {
 			}
