--- a/src/Blacklite.Framework.Shared.Reflection/project.json
+++ b/src/Blacklite.Framework.Shared.Reflection/project.json
@@ -4,7 +4,11 @@
         "Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
         "Blacklite.Framework.Interfaces":"1.0.0-beta-*"
     },
-	
+
+   "devDependencies": {
+        "NR6Pack": "0.5.0.0"
+    },
+
 	"compilationOptions": {
 		"warningsAsErrors": true
 	},
