--- a/src/Blacklite.Framework.Shared/project.json
+++ b/src/Blacklite.Framework.Shared/project.json
@@ -5,6 +5,10 @@
         "Microsoft.Framework.DependencyInjection": "1.0.0-beta3"
 	},
 
+   "devDependencies": {
+        "NR6Pack": "0.5.0.0"
+    },
+
 	"compilationOptions": {
 		"warningsAsErrors": true
 	},
