--- a/src/Blacklite.Framework.Events/project.json
+++ b/src/Blacklite.Framework.Events/project.json
@@ -4,6 +4,14 @@
 		"Blacklite.Framework.Interfaces": "1.0.0-beta-*"
 	},
 
+   "devDependencies": {
+        "NR6Pack": "0.5.0.0"
+    },
+
+	"compilationOptions": {
+		"warningsAsErrors": true
+	},
+
 	"frameworks": {
 		"net45": {
 			"frameworkAssemblies": {
