--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -10,6 +10,10 @@
 		"Blacklite.Framework.Interfaces": "1.0.0-beta-*"
 	},
 
+   "devDependencies": {
+        "NR6Pack": "0.5.0.0"
+    },
+
 	"compilationOptions": {
 		"warningsAsErrors": true
 	},
