--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -6,8 +6,8 @@
 		"Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
 		"Microsoft.Framework.ConfigurationModel": "1.0.0-beta3",
 		"Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3",
-		"Blacklite.Framework.Events": "1.0.0-beta-*",
-		"Blacklite.Framework.Interfaces": "1.0.0-beta-*"
+		"Blacklite.Framework.Events": "1.0.0-*",
+		"Blacklite.Framework.Interfaces": "1.0.0-*"
 	},
 
    "devDependencies": {
@@ -35,7 +35,7 @@
 		},
 		"aspnetcore50": {
 			"dependencies": {
-				"System.Runtime": "4.0.20-beta-*"
+				"System.Runtime": "4.0.20-*"
 			}
 		}
 	}
