--- a/src/Blacklite.Framework.Interfaces/project.json
+++ b/src/Blacklite.Framework.Interfaces/project.json
@@ -31,8 +31,8 @@
         },
         "aspnetcore50": {
             "dependencies": {
-                "System.Runtime": "4.0.20-beta-*",
-                "System.ComponentModel": "4.0.0-beta-*"
+                "System.Runtime": "4.0.20-*",
+                "System.ComponentModel": "4.0.0-*"
             }
         }
     }
