--- a/src/Blacklite.Framework.Shared.Reflection/project.json
+++ b/src/Blacklite.Framework.Shared.Reflection/project.json
@@ -2,7 +2,7 @@
     "version": "1.0.0-*",
     "dependencies": {
         "Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
-        "Blacklite.Framework.Interfaces":"1.0.0-beta-*"
+        "Blacklite.Framework.Interfaces":"1.0.0-*"
     },
 
    "devDependencies": {
@@ -40,15 +40,15 @@
         },
         "aspnetcore50": {
             "dependencies": {
-                "System.Runtime": "4.0.20-beta-*",
-                "System.Linq": "4.0.0-beta-*",
-                "System.Linq.Expressions": "4.0.0-beta-*",
-                "System.Collections": "4.0.10-beta-*",
-                "System.ComponentModel": "4.0.0-beta-*",
-                "System.Reflection": "4.0.10-beta-*",
-                "System.Reflection.Extensions": "4.0.0-beta-*",
-                "System.Reflection.Primitives": "4.0.0-beta-*",
-                "System.Reflection.TypeExtensions": "4.0.0-beta-*"
+                "System.Runtime": "4.0.20-*",
+                "System.Linq": "4.0.0-*",
+                "System.Linq.Expressions": "4.0.0-*",
+                "System.Collections": "4.0.10-*",
+                "System.ComponentModel": "4.0.0-*",
+                "System.Reflection": "4.0.10-*",
+                "System.Reflection.Extensions": "4.0.0-*",
+                "System.Reflection.Primitives": "4.0.0-*",
+                "System.Reflection.TypeExtensions": "4.0.0-*"
             }
         }
     }
