Updated for beta5

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ bld/
 
 # Roslyn cache directories
 *.ide/
+*.vs/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -192,3 +193,4 @@ ModelManifest.xml
 
 lib/
 .nuget/
+project.lock.json
