--- a/src/Blacklite.Framework.Events/project.json
+++ b/src/Blacklite.Framework.Events/project.json
@@ -1,7 +1,7 @@
 ﻿{
 	"version": "1.0.0-*",
 	"dependencies": {
-		"Blacklite.Framework.Interfaces": "1.0.0-*"
+		"Blacklite.Framework.Abstractions": "1.0.0-*"
 	},
 
    "devDependencies": {
@@ -13,26 +13,14 @@
 	},
 
 	"frameworks": {
-		"net45": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.0.0",
-				"System.Collections": "4.0.0.0"
-			},
+		"dnx452": {
 			"dependencies": {
 			}
 		},
-		"aspnet50": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.10.0",
-				"System.Collections": "4.0.0.0"
-			},
+		"dnxcore50": {
 			"dependencies": {
-			}
-		},
-		"aspnetcore50": {
-			"dependencies": {
-				"System.Runtime": "4.0.20-*",
-				"System.Collections": "4.0.10-*"
+				"System.Runtime": "4.0.20-beta-*",
+				"System.Collections": "4.0.10-beta-*"
 			}
 		}
 	}
