--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -3,11 +3,11 @@
 	"dependencies": {
 		"Rx-Core": "2.2.5.0",
 		"Rx-Linq": "2.2.5.0",
-		"Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
-		"Microsoft.Framework.ConfigurationModel": "1.0.0-beta3",
-		"Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta3",
+		"Microsoft.Framework.DependencyInjection": "1.0.0-beta5",
+		"Microsoft.Framework.ConfigurationModel": "1.0.0-beta5",
+		"Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta5",
 		"Blacklite.Framework.Events": "1.0.0-*",
-		"Blacklite.Framework.Interfaces": "1.0.0-*"
+		"Blacklite.Framework.Abstractions": "1.0.0-*"
 	},
 
    "devDependencies": {
@@ -19,23 +19,13 @@
 	},
 
 	"frameworks": {
-		"net45": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.0.0"
-			},
+		"dnx452": {
 			"dependencies": {
 			}
 		},
-		"aspnet50": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.10.0"
-			},
+		"dnxcore50": {
 			"dependencies": {
-			}
-		},
-		"aspnetcore50": {
-			"dependencies": {
-				"System.Runtime": "4.0.20-*"
+				"System.Runtime": "4.0.20-beta-*"
 			}
 		}
 	}
