--- a/src/Blacklite.Framework.Shared.Reflection/project.json
+++ b/src/Blacklite.Framework.Shared.Reflection/project.json
@@ -1,7 +1,8 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Blacklite.Framework.Interfaces":"1.0.0-*"
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5",
+        "Blacklite.Framework.Abstractions":"1.0.0-*"
     },
 
    "devDependencies": {
@@ -13,41 +14,21 @@
 	},
 
     "frameworks": {
-        "net45": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.0.0",
-                "System.Collections": "4.0.0.0",
-                "System.Linq": "4.0.0.0",
-                "System.Reflection": "4.0.0.0",
-                "System.Reflection.Extensions": "4.0.0.0",
-                "System.Reflection.Primitives": "4.0.0.0"
-            },
+        "dnx452": {
             "dependencies": {
             }
         },
-        "aspnet50": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.10.0",
-                "System.Collections": "4.0.0.0",
-                "System.Linq": "4.0.0.0",
-                "System.Reflection": "4.0.0.0",
-                "System.Reflection.Extensions": "4.0.0.0",
-                "System.Reflection.Primitives": "4.0.0.0"
-            },
+        "dnxcore50": {
             "dependencies": {
-            }
-        },
-        "aspnetcore50": {
-            "dependencies": {
-                "System.Runtime": "4.0.20-*",
-                "System.Linq": "4.0.0-*",
-                "System.Linq.Expressions": "4.0.0-*",
-                "System.Collections": "4.0.10-*",
-                "System.ComponentModel": "4.0.0-*",
-                "System.Reflection": "4.0.10-*",
-                "System.Reflection.Extensions": "4.0.0-*",
-                "System.Reflection.Primitives": "4.0.0-*",
-                "System.Reflection.TypeExtensions": "4.0.0-*"
+                "System.Runtime": "4.0.20-beta-*",
+                "System.Linq": "4.0.0-beta-*",
+                "System.Linq.Expressions": "4.0.0-beta-*",
+                "System.Collections": "4.0.10-beta-*",
+                "System.ComponentModel": "4.0.0-beta-*",
+                "System.Reflection": "4.0.10-beta-*",
+                "System.Reflection.Extensions": "4.0.0-beta-*",
+                "System.Reflection.Primitives": "4.0.0-beta-*",
+                "System.Reflection.TypeExtensions": "4.0.0-beta-*"
             }
         }
     }
