--- a/src/Blacklite.Framework.Steps/project.json
+++ b/src/Blacklite.Framework.Steps/project.json
@@ -1,47 +1,33 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5",
         "Blacklite.Framework.Shared": "1.0.0-*",
         "Blacklite.Framework.Shared.Reflection": "1.0.0-*",
-        "Blacklite.Framework.Interfaces": "1.0.0-*"
+        "Blacklite.Framework.Abstractions": "1.0.0-*"
     },
 
-   "devDependencies": {
+    "devDependencies": {
         "NR6Pack": "0.5.0.0"
     },
 
-	"compilationOptions": {
-		"warningsAsErrors": true
-	},
+    "compilationOptions": {
+        "warningsAsErrors": true
+    },
 
     "frameworks": {
-        "net45": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.0.0",
-                "System.Collections.Concurrent": "4.0.0.0",
-                "System.Reflection": "4.0.0.0",
-                "System.Reflection.Extensions": "4.0.0.0"
-            }
-        },
-        "aspnet50": {
-			"frameworkAssemblies": {
-				"System.Runtime": "4.0.10.0",
-                "System.Collections.Concurrent": "4.0.0.0",
-                "System.Reflection": "4.0.0.0",
-                "System.Reflection.Extensions": "4.0.0.0"
-            },
+        "dnx452": {
             "dependencies": {
             }
         },
-        "aspnetcore50": {
+        "dnxcore50": {
             "dependencies": {
-                "System.Runtime": "4.0.20-*",
-                "System.ComponentModel": "4.0.0-*",
-                "System.Reflection.Extensions": "4.0.0-*",
-                "System.Reflection.TypeExtensions": "4.0.0-*",
-                "System.Collections.Concurrent": "4.0.0-*",
-                "System.ObjectModel": "4.0.10-*"
+                "System.Runtime": "4.0.20-beta-*",
+                "System.ComponentModel": "4.0.0-beta-*",
+                "System.Reflection.Extensions": "4.0.0-beta-*",
+                "System.Reflection.TypeExtensions": "4.0.0-beta-*",
+                "System.Collections.Concurrent": "4.0.0-beta-*",
+                "System.ObjectModel": "4.0.10-beta-*"
             }
         }
     }
