Fixed common beta5

--- a/src/Blacklite.Framework.Abstractions/project.json
+++ b/src/Blacklite.Framework.Abstractions/project.json
@@ -1,20 +1,19 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta5"
+        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta5-*"
     },
 
-   "devDependencies": {
+    "devDependencies": {
         "NR6Pack": "0.5.0.0"
     },
 
-	"compilationOptions": {
-		"warningsAsErrors": true
-	},
+    "compilationOptions": {
+        "warningsAsErrors": true
+    },
 
     "frameworks": {
-        "dnx452": {
-        },
+        "dnx451": { },
         "dnxcore50": {
             "dependencies": {
                 "System.Runtime": "4.0.20-beta-*",
