--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -1,32 +1,29 @@
 ﻿{
-	"version": "1.0.0-*",
-	"dependencies": {
-		"Rx-Core": "2.2.5.0",
-		"Rx-Linq": "2.2.5.0",
-		"Microsoft.Framework.DependencyInjection": "1.0.0-beta5",
-		"Microsoft.Framework.ConfigurationModel": "1.0.0-beta5",
-		"Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta5",
-		"Blacklite.Framework.Events": "1.0.0-*",
-		"Blacklite.Framework.Abstractions": "1.0.0-*"
-	},
+    "version": "1.0.0-*",
+    "dependencies": {
+        "Rx-Core": "2.2.5.0",
+        "Rx-Linq": "2.2.5.0",
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5-*",
+        "Microsoft.Framework.ConfigurationModel": "1.0.0-beta5-*",
+        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta5-*",
+        "Blacklite.Framework.Events": "1.0.0-*",
+        "Blacklite.Framework.Abstractions": "1.0.0-*"
+    },
 
-   "devDependencies": {
+    "devDependencies": {
         "NR6Pack": "0.5.0.0"
     },
 
-	"compilationOptions": {
-		"warningsAsErrors": true
-	},
+    "compilationOptions": {
+        "warningsAsErrors": true
+    },
 
-	"frameworks": {
-		"dnx452": {
-			"dependencies": {
-			}
-		},
-		"dnxcore50": {
-			"dependencies": {
-				"System.Runtime": "4.0.20-beta-*"
-			}
-		}
-	}
+    "frameworks": {
+        "dnx451": { },
+        "dnxcore50": {
+            "dependencies": {
+                "System.Runtime": "4.0.20-beta-*"
+            }
+        }
+    }
 }
