--- a/src/Blacklite.Framework.Events/project.json
+++ b/src/Blacklite.Framework.Events/project.json
@@ -1,27 +1,24 @@
 ﻿{
-	"version": "1.0.0-*",
-	"dependencies": {
-		"Blacklite.Framework.Abstractions": "1.0.0-*"
-	},
+    "version": "1.0.0-*",
+    "dependencies": {
+        "Blacklite.Framework.Abstractions": "1.0.0-*"
+    },
 
-   "devDependencies": {
+    "devDependencies": {
         "NR6Pack": "0.5.0.0"
     },
 
-	"compilationOptions": {
-		"warningsAsErrors": true
-	},
+    "compilationOptions": {
+        "warningsAsErrors": true
+    },
 
-	"frameworks": {
-		"dnx452": {
-			"dependencies": {
-			}
-		},
-		"dnxcore50": {
-			"dependencies": {
-				"System.Runtime": "4.0.20-beta-*",
-				"System.Collections": "4.0.10-beta-*"
-			}
-		}
-	}
+    "frameworks": {
+        "dnx451": { },
+        "dnxcore50": {
+            "dependencies": {
+                "System.Runtime": "4.0.20-beta-*",
+                "System.Collections": "4.0.10-beta-*"
+            }
+        }
+    }
 }
