--- a/src/Blacklite.Framework.Shared.Reflection/project.json
+++ b/src/Blacklite.Framework.Shared.Reflection/project.json
@@ -1,28 +1,25 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5",
-        "Blacklite.Framework.Abstractions":"1.0.0-*"
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5-*",
+        "Blacklite.Framework.Abstractions": "1.0.0-*"
     },
 
-   "devDependencies": {
+    "devDependencies": {
         "NR6Pack": "0.5.0.0"
     },
 
-	"compilationOptions": {
-		"warningsAsErrors": true
-	},
+    "compilationOptions": {
+        "warningsAsErrors": true
+    },
 
     "frameworks": {
-        "dnx452": {
-            "dependencies": {
-            }
-        },
+        "dnx451": { },
         "dnxcore50": {
             "dependencies": {
                 "System.Runtime": "4.0.20-beta-*",
                 "System.Linq": "4.0.0-beta-*",
-                "System.Linq.Expressions": "4.0.0-beta-*",
+                "System.Linq.Expressions": "4.0.10-beta-*",
                 "System.Collections": "4.0.10-beta-*",
                 "System.ComponentModel": "4.0.0-beta-*",
                 "System.Reflection": "4.0.10-beta-*",
