--- a/src/Blacklite.Framework.Shared/project.json
+++ b/src/Blacklite.Framework.Shared/project.json
@@ -1,30 +1,27 @@
 ﻿{
-	"version": "1.0.0-*",
-	"dependencies": {
+    "version": "1.0.0-*",
+    "dependencies": {
         "Blacklite.Framework.Abstractions": "1.0.0-*",
-        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5"
-	},
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5-*"
+    },
 
-   "devDependencies": {
+    "devDependencies": {
         "NR6Pack": "0.5.0.0"
     },
 
-	"compilationOptions": {
-		"warningsAsErrors": true
-	},
+    "compilationOptions": {
+        "warningsAsErrors": true
+    },
 
-	"frameworks": {
-		"dnx452": {
-			"dependencies": {
-			}
-		},
-		"dnxcore50": {
-			"dependencies": {
-				"System.Runtime": "4.0.20-beta-*",
-				"System.Collections": "4.0.10-beta-*",
-				"System.Linq": "4.0.0-beta-*",
-				"System.Reflection": "4.0.10-beta-*"
-			}
-		}
-	}
+    "frameworks": {
+        "dnx451": { },
+        "dnxcore50": {
+            "dependencies": {
+                "System.Runtime": "4.0.20-beta-*",
+                "System.Collections": "4.0.10-beta-*",
+                "System.Linq": "4.0.0-beta-*",
+                "System.Reflection": "4.0.10-beta-*"
+            }
+        }
+    }
 }
