--- a/src/Blacklite.Framework.Steps/project.json
+++ b/src/Blacklite.Framework.Steps/project.json
@@ -1,7 +1,7 @@
 ﻿{
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5",
+        "Microsoft.Framework.DependencyInjection": "1.0.0-beta5-*",
         "Blacklite.Framework.Shared": "1.0.0-*",
         "Blacklite.Framework.Shared.Reflection": "1.0.0-*",
         "Blacklite.Framework.Abstractions": "1.0.0-*"
@@ -16,10 +16,7 @@
     },
 
     "frameworks": {
-        "dnx452": {
-            "dependencies": {
-            }
-        },
+        "dnx451": { },
         "dnxcore50": {
             "dependencies": {
                 "System.Runtime": "4.0.20-beta-*",
