--- a/src/Blacklite.Framework.Events/project.json
+++ b/src/Blacklite.Framework.Events/project.json
@@ -13,11 +13,17 @@
     },
 
     "frameworks": {
-        "dnx451": { },
+        "dnx451": {
+            "frameworkAssemblies": {
+                "System.Runtime": "4.0.10.0",
+                "System.Collections": "4.0.0.0"
+            }
+        },
         "dnxcore50": {
             "dependencies": {
                 "System.Runtime": "4.0.20-beta-*",
-                "System.Collections": "4.0.10-beta-*"
+                "System.Collections": "4.0.10-beta-*",
+                "System.ObjectModel": "4.0.10-beta-*"
             }
         }
     }
