--- a/src/Blacklite.Framework.GlobalEvents/project.json
+++ b/src/Blacklite.Framework.GlobalEvents/project.json
@@ -4,7 +4,7 @@
         "Rx-Core": "2.2.5.0",
         "Rx-Linq": "2.2.5.0",
         "Microsoft.Framework.DependencyInjection": "1.0.0-beta5-*",
-        "Microsoft.Framework.ConfigurationModel": "1.0.0-beta5-*",
+        "Microsoft.Framework.Configuration": "1.0.0-beta5-*",
         "Microsoft.Framework.Runtime.Abstractions": "1.0.0-beta5-*",
         "Blacklite.Framework.Events": "1.0.0-*",
         "Blacklite.Framework.Abstractions": "1.0.0-*"
