--- a/src/Blacklite.Framework.Abstractions/project.json
+++ b/src/Blacklite.Framework.Abstractions/project.json
@@ -1,5 +1,6 @@
 ﻿{
     "version": "1.0.0-*",
+    "authors": ["David Driscoll"],
     "dependencies": {
         "Microsoft.Framework.Runtime.Abstractions": "1.0.0-beta5-*"
     },
