--- a/src/Blacklite.Framework.Events/project.json
+++ b/src/Blacklite.Framework.Events/project.json
@@ -1,6 +1,9 @@
 ﻿{
     "version": "1.0.0-*",
+    "authors": ["David Driscoll"],
     "dependencies": {
+        "Rx-Core": "2.2.5.0",
+        "Rx-Linq": "2.2.5.0",
         "Blacklite.Framework.Abstractions": "1.0.0-*"
     },
 
@@ -16,14 +19,16 @@
         "dnx451": {
             "frameworkAssemblies": {
                 "System.Runtime": "4.0.10.0",
-                "System.Collections": "4.0.0.0"
+                "System.Collections": "4.0.0.0",
+                "System.Collections.Concurrent": "4.0.0.0"
             }
         },
         "dnxcore50": {
             "dependencies": {
                 "System.Runtime": "4.0.20-beta-*",
                 "System.Collections": "4.0.10-beta-*",
-                "System.ObjectModel": "4.0.10-beta-*"
+                "System.ObjectModel": "4.0.10-beta-*",
+                "System.Linq": "4.0.0-beta-*"
             }
         }
     }
