--- a/src/Blacklite.Framework.Steps/project.json
+++ b/src/Blacklite.Framework.Steps/project.json
@@ -1,5 +1,6 @@
 ﻿{
     "version": "1.0.0-*",
+    "authors": ["David Driscoll"],
     "dependencies": {
         "Microsoft.Framework.DependencyInjection": "1.0.0-beta5-*",
         "Blacklite.Framework.Shared": "1.0.0-*",
