--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ init:
 test: off
 
 build_script:
-  - echo APPVEYOR: %APPVEYOR%
-  - echo APPVEYOR_REPO_TAG: %APPVEYOR_REPO_TAG%
-  - echo APPVEYOR_REPO_BRANCH: %APPVEYOR_REPO_BRANCH%
+  - "echo APPVEYOR: %APPVEYOR%"
+  - "echo APPVEYOR_REPO_TAG: %APPVEYOR_REPO_TAG%"
+  - "echo APPVEYOR_REPO_BRANCH: %APPVEYOR_REPO_BRANCH%"
   - ps: .\build.ps1
 
 artifacts:
